<resources>
    <string name="app_name">ArendVanDormalen-pset6</string>
    <string name="log_in">Log In</string>
    <string name="go_to_database">Go To Database</string>
    <string name="enter_email_hint">Enter E-mail Adress</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="log_in_button">Log In</string>
    <string name="search_button_database">Search</string>
    <string name="search_box_database">Enter Title</string>
    <string name="content_description_image_single_item">Artwork</string>
    <string name="title_user">Your Favorites:</string>
    <string name="title_database">Search through the Rijksmuseum collection:</string>
    <string name="museum_logo_home_description">Rijksmuseum logo</string>
    <string name="log_in_title">Log in or register here:</string>
    <string name="database_button_user">To Database</string>
</resources>
