<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arend.arendvandormalen_pset6.LogInActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOG IN SCREEN"
        android:id="@+id/top_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_box"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@id/top_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_box"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/email_box"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_button"
        android:onClick="createAccount"
        android:text="@string/create_account_button"
        android:layout_below="@id/password_box"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_in_button"
        android:onClick="signIn"
        android:text="@string/log_in_button"
        android:layout_below="@id/create_account_button"/>

</RelativeLayout>
