<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_database"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arend.arendvandormalen_pset6.DatabaseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_database"
        android:textSize="30sp"
        android:id="@+id/title_database"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_box_database"
        android:layout_below="@id/title_database"
        android:layout_margin="20dp"
        android:hint="@string/search_box_database"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_button_database"
        android:layout_toRightOf="@id/search_box_database"
        android:layout_toEndOf="@id/search_box_database"
        android:layout_alignTop="@id/search_box_database"
        android:layout_alignBottom="@id/search_box_database"
        android:text="@string/search_button_database"
        android:onClick="searchOnTitle"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/results_list_database"
        android:layout_below="@id/search_button_database">
    </ListView>


</RelativeLayout>
